--- a/Server/Public/style.css
+++ b/Server/Public/style.css
@@ -1,5 +1,9 @@
 html {
     font-family: 'Orbitron', sans-serif;font-family: 'VT323', monospace;
+    background-image: url("background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 
 }
@@ -10,19 +14,33 @@ button {
     font-size: 24px;
 }
 
+.button {
+    background: rgb(62, 63, 52);
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    padding: 10px;
+    border: 1px solid black;
+}
+
 
 .parent {
-  text-align: center;
+    text-align: center;
 }
 
 .child {
     display: inline-block;
-     font-size: 24px;
+    font-size: 36px;
 }
 
 input {
     padding: 7px;
     font-family: 'Orbitron', sans-serif;font-family: 'VT323', monospace;
     font-size: 22px;
+    background: rgb(202, 204, 174);
+    border: 1px solid black;
 
 }
